2005-10-03  Adam Jocksch  <ajocksch@redhat.com>

	* SourceWindow.java (launchPreferenceWindow): Now calls refresh in 
	SourceWindow.
	(refresh): Added.
	
	* PreferenceWindow.java (setupButtons): Status of "Show Toolbar" now
	updated.
	(buttonEvent): Status of "Show Toolbar" saved into prefs model.

2005-10-03  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMFrysk.java: added addPID() method
						 modified getPID() method
						 
	* dom/DOMTestDOMFrysk.java: added addPPID()/getPID() tests
								added DOMGetImage tests
								made test messages all look similar

2005-10-03  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMFrysk.java: added addImage() method
						 added checkImageDup() method
						 modified getImage() method
	
	* dom/DOMTestDOMFrysk.java: added tests for above methods plus some others

2005-09-30  Adam Jocksch  <ajocksch@redhat.com>

	* InlineViewer (drawMargin): Added code to draw margin for scopes with
	ellipsis visible.

2005-09-30  Adam Jocksch  <ajocksch@redhat.com>

	* SourceViewWidget.java (drawMargin): Changed to protected.
	(drawMargin): Fixed bug where gap for inline code in line numbers wasn't
	being obeyed (bug #1398)
	(setSubscopeAtCurrentLine): Added checks for pre-existing child anchor.
	(clearSubscopeAtCurrentLine): Nullifies old child anchor.
	(mouseEvent): Removed unecesary refresh.
	
	* InlineHandler.java (moveDown): Fixed bug where upper scope wouldn't
	change.
	(moveDown): Removed unnecesary refresh commands.
	(moveUp): Ditto.
	
	* InlineViewer.java (drawMargin): Added.
	(toggleChild): Calls now set expanded.

2005-09-29  Adam Jocksch  <ajocksch@redhat.com>

	* InlineHandler.java (moveDown): Refactored ellipsis code into 
	InlineViewer::load.
	(moveUp): Ditto.
	
	* InlineViewer (load): Added ellipsis code from InlineHandler.
	(InlineViewer): Added constructor that takes boolean flag to show
	ellipsis.

2005-09-29  Adam Jocksch  <ajocksch@redhat.com>

	* InlineHandler.java (moveDown): Extracted sections into 